--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>prueba</title>
+    <title>Primera página</title>
 </head>
 <body>
+    <div>
+        parte del cuerpo
+    </div>
     
 </body>
 </html>
